assets/css/sass/_style.sass
@import 'constants'
// Everything Else
body
    position: relative
    background-color:  $light-beige
    color: $red
    font-family: $body-font
    min-height: 100vh
    font-size: 18px
    @include display-flex
    @include font-smoothing(antialiased)
    @include flex-direction(column)
    > .content
        @include flex(1)
.container 
    max-width: 900px
.container-full 
    width: 100% 
    max-width: 100% !important

.content
    > 
        div, section
            padding-bottom: $space * 4
            @media (max-width: #{$sm-width})
                padding-bottom: $space * 2
            > section
                &:last-child 
                    padding-top: 0px
        .no-padding
            padding-bottom: 0
section
    padding: $space * 2 0
    @include breakpoint($md-width)
        padding: $space 0

header
    width: 100%
    height: 75px
header, .navbar-header
    background-color: $orange

nav 

    .navbar-nav
        > li
            @include non-text-link-style
            margin-left: $space
            @include breakpoint($sm-width)
                margin-right: $space
            > a
                font-size: 18px
                line-height: 18px
                &:hover, &:focus
                    color: $beige
                    text-decoration: none
                    background-color: $dark-orange !important
                @media (max-width : #{$sm-width})
                    padding-left: $space
        .soc-media-links
            a, .a 
                display: inline-block
                padding-right: $space/2
                padding-left: 0
                margin-right: $space/2
                font-size: 20px
                line-height: 20px
                &:hover, &:focus
                    background-color: transparent !important
            
            @media only screen and (max-width : 768px)
                padding-left : $space
    &.navbar-collapse
        @media (max-width: #{$sm-width})
            padding: 0

.navbar-toggle
    margin: ($header-height - 34px)/2 - 2 $space
    .icon-bar
        background-color: $beige
        height: 3px
        border-radius: 1px 
        width: 30px
        box-shadow: 1px 1px 1px $dark-orange

.nav 
    margin: ($header-height - 50px)/2 0 
    @media (max-width: #{$sm-width})
        margin: 15px 0
.navbar-brand
    height: $header-height
    padding: $space 0
    color: $beige
    @media (max-width : #{$sm-width})
        margin-left: $space
    &:hover 
        color: $beige
    .logo 
        width: $logo-size 
        display: inline-block
        vertical-align: top
    .logo-text
        display: inline-block
        height: $header-height - $space*2
        padding: 3px 8px
        img 
            height: 100%

div.clear-both
    clear: both

h1, h2, h3, h4, .h1
    font-family: $header-font
    font-weight: bold
    @include font-smoothing(subpixel-antialiased)

h1, h2, h3
    color: $red

a, .a
    color: $red
    font-weight: bold
    &:focus, &:hover 
        color: $red
        text-decoration: underline

p
    margin-top: 0
    font-size: 1em
    &.desc
        text-align: center

footer
    width: 100%
    background-color: $red
    padding: $space*2 0px
    margin-top: 0px
    h3
        display: block
        margin-top: 0px
        margin-bottom: $space
    div#footer-wrapper
        margin: 0 auto
        div#sponsors 
            float: right
            width: 70%
        div#social-media-share
            float: left
            width: 30%
            ul 
                @include clear-spacing
                list-style: none 
                a.share-button
                    margin-bottom: $space/2
                    display: inline-block
                    background-color: #3B5998
                    padding: $space/2
                    color: white
                    font-size: medium
                    text-shadow: none
                    @include rounded-corners($space/4)
                    img
                        width: 18px
                        margin-right: $space/4
                        display: inline-block
                    span    
                        line-height: 18px
    ul#sponsor_list
        @include clear-spacing
        width: 100%
        display: table
        li 
            display: inline-block
            vertical-align: middle
            max-width: $sponsor_width
            clear: both
            margin-right: $space * 2
            img
                margin: 0 auto
                margin-bottom: $space
                max-width: $sponsor_width
                display: block
            span 
                display: block
                font-size: $small-font

    h1, h2, h3, p, a 
        color: $orange
    a 
        font-weight: bold

    p 
        @include insignificant-text
        text-align: center

// Buttons
.btn 
    @include fade-in
    color: $beige
.btn-primary-dark
    @include btn-color($dark-orange, $red)
.btn-primary
    @include btn-color($orange, $dark-orange)


.ad 
    > div 
        width: 250px
        height: 200px
        margin-bottom: $space
        background-color: rgba($light-orange, 0.5)
        img 
            max-width: 100%
    color: $red
    margin: $space
    .sponsors 
        padding: $space
        height: 206px
        background-color: transparent
        border: 1px solid $red
        .sponsor-list 
            padding: 0px
            font-size: 16px
            color: $red
            a 
                color: $red

//Placeholder text color
::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder 
    color: $orange


.heading-img
    @include rounded-corners($heading-icon-size/2)
    @include small-shadow($brown)
    display: block
    margin:
        top: $space * 3
        bottom: $space
        left: auto
        right: auto
    background-color: $red 
    width: $heading-icon-size
    height: $heading-icon-size
    padding: $space
    img
        width: $heading-icon-size - $space * 2

.subtitle
    @include clear-spacing
    margin-top: -$space * 2
    font-size: 1.3em
    font-weight: bold
    color: $bright-orange
    @include small-text-shadow($light-brown)

div.mouseover-text
    background-color: white      
    position: absolute
    z-index: 99
    font-size: 0.8em
    padding: $space/4
    @include rounded-corners(4px)

div.cafe-types
    margin: $space/2 0
    img 
        margin-right: $space/4

//RESPONSIVE STUFF
$icons-mobile-size: 80px 
$logo-size-small: $logo-size * 0.8

@mixin smaller-imgs
    .heading-img
        padding: $space
        width: $heading-icon-size * 0.6
        img
            width: ($heading-icon-size - $space * 2) * 0.6
            padding: $space/2

@media only screen and (max-width : 650px)
    body
        font-size: 1em

@media only screen and (max-width : 768px)
    header 
        height: auto
    h1, .h1
        font-size: 2.6em
    h2
        font-size: 2em
    h3, h4
        font-size: 1.5em

    .content
        h1, h2, h3, h4
            text-align: center

    .heading-img 
        width: 50%
        height: 50%
        img 
            width: 100%
    footer 
        div#footer-wrapper
            div#social-media-share, div#sponsors
                float: none
                width: 100%
                display: block
            #social-media-share
                margin-bottom: $space
        #share-button
            width: 150px
        ul#sponsor_list
            display: block
            li
                display: inline-block
                span 
                    display: none
                img
                    width: $icons-mobile-size
.addthis_native_toolbox
    width: 200px
    display: block
    overflow: hidden
    a 
        height: 30px
        margin-right: $space
        display: table-cell

        div 
            span 
                vertical-align: top !important
#_atssh
    display: none

